# quetzal-network-editor-backend

./: .gitattributes  .gitignore  Pipfile  README.md  auth.py  dockerfile  main.py  requirements.txt  ruff.toml  test.ipynb
auth/: update-lambda.sh
cognito_auth/: auth.py  main.py  update-lambda.sh
docker/: README.md  main.py  main_ecs.py
docker/scripts/: _push-image.bat  _push-image.sh  _update-ecs-task.sh  _update-lambda-image.sh  change-lambda-image.bat  change-lambda-image.sh  lock-scenarios.py  modelConfig_migration.ipynb  push-image.bat  push-image.sh  test-lambda.sh  unlock-scenarios.py  update-S3-model-files.py  update-ecs.sh  update-function-config.py  update-lambda-image.sh  update-lambda.bat  update-lambda.sh  update-model-config.py  update-model-docs.py  update-model-steps.py
docker/template/: .env  Dockerfile.dockerignore
docker/template_ecs/: Dockerfile  steps.json
docker/template_lambda/: Dockerfile
docker/templates/: .env  Dockerfile  modelConfig.json  requirements.txt  step-functions.json
docker/templates_ecs/: Dockerfile  steps.json
infra/: README.md  main.tf  var.tf
infra/base/: .terraform.lock.hcl  README.md  main.tf  var.tf
services/: update-lambda.sh
services/cognito_auth/: .env  CHANGELOG.md  README.md  auth.py  dockerfile  ecs.py  main.py  mappers.py  models.py  pyproject.toml  start.sh  step_status.py  stepfunctions.py  update-lambda.sh
services/cognito_auth/middlewares/: exception.py
services/cognito_auth/run/: ecs.py  mappers.py  models.py  step_status.py  stepfunctions.py
services/cognito_auth/users/: cognito.py
(+100 files in other folders)
